fix LayerRemove button became icon because of overlaps

--- a/modules/menu/mobile/style.less
+++ b/modules/menu/mobile/style.less
@@ -54,14 +54,8 @@
         }
         margin-right: 20px;
     }
-    .remove-layer {
-        color: #F2F2F2;
-        background-color: #808080;
-        border-radius: 10px;
-        padding: 4px 3px 3px 3px;
-        margin-left: 10px;
-        cursor: pointer;
-        position: absolute;
+    >.remove-layer {
+        margin-right: 20px;
     }
 }
 .list-group-item {
